--- a/capsules/core/Cargo.toml
+++ b/capsules/core/Cargo.toml
@@ -13,5 +13,8 @@ kernel = { path = "../../kernel" }
 enum_primitive = { path = "../../libraries/enum_primitive" }
 tickv = { path = "../../libraries/tickv" }
 
+[features]
+use_static_init = ["kernel/use_static_init"]
+
 [lints]
 workspace = true
