--- a/capsules/extra/Cargo.toml
+++ b/capsules/extra/Cargo.toml
@@ -14,5 +14,8 @@ enum_primitive = { path = "../../libraries/enum_primitive" }
 tickv = { path = "../../libraries/tickv" }
 capsules-core = { path = "../core" }
 
+[features]
+use_static_init = ["kernel/use_static_init"]
+
 [lints]
 workspace = true
