--- a/capsules/system/Cargo.toml
+++ b/capsules/system/Cargo.toml
@@ -12,5 +12,8 @@ edition.workspace = true
 kernel = { path = "../../kernel" }
 tock-tbf = { path = "../../libraries/tock-tbf" }
 
+[features]
+use_static_init = ["kernel/use_static_init"]
+
 [lints]
 workspace = true
