--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -35,6 +35,8 @@ trace_syscalls = []
 debug_load_processes = []
 no_debug_panics = []
 debug_process_credentials = []
+counted_grant_refs = []
+use_static_init = []
 
 [lints]
 workspace = true
