--- a/arch/riscv/Cargo.toml
+++ b/arch/riscv/Cargo.toml
@@ -12,6 +12,7 @@ edition.workspace = true
 kernel = { path = "../../kernel" }
 tock-registers = { path = "../../libraries/tock-register-interface" }
 riscv-csr = { path = "../../libraries/riscv-csr" }
+misc = { path = "../../libraries/misc" }
 
 [features]
 page_align_pmp = []
