--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ members = [
     "boards/nano33ble",
     "boards/nano33ble_rev2",
     "boards/qemu_rv32_virt",
+    "boards/qemu_cheri_virt",
     "boards/swervolf",
     "boards/weact_f401ccu6/",
     "boards/configurations/nrf52840dk/nrf52840dk-test-appid-sha256",
@@ -93,6 +94,7 @@ members = [
     "chips/stm32f4xx",
     "chips/swerv",
     "chips/swervolf-eh1",
+    "chips/uarts",
     "chips/virtio",
     "kernel",
     "libraries/enum_primitive",
