Add some misc helpers
These don't really belong in kernel/utilities.
A collection of helper types / macros

*const_env
Macro parse envionment variables as constant inits
*default_array
Trait to construct arrays of more than 32 elements
*divorce
Trait to describe a more dynamic borrowing semantic used DMA interfaces
*never
! is not stable, and I wanted to use a consistent type
*overload_impl
A macro to do overloading of traits
*potatoes
Helpers to catch unintended destruction by panicking
*take_borrow
Helper to allow calling methods on things in Cell<>
*tpanic
Panic wrapper that behaves differently in tests
*trait_alias
Macro to create trait aliases.
Also a workaround on our version of the compiler where bounds do not
propagate properly.
*unsigned_allocators
Two allocators over unsigned integers

Change-Id: Ib334c4bcdc075916477357073102b3f599994ff1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,6 +99,7 @@ members = [
     "libraries/tock-cells",
     "libraries/tock-register-interface",
     "libraries/tickv",
+    "libraries/misc",
 ]
 exclude = ["tools/"]
 resolver = "2"
